--- a/index.css
+++ b/index.css
@@ -1,48 +1,84 @@
 #header-h1 {
-    position:absolute;
-    color:brown;
-    top:-5px;
-    right:60%;
+    position:relative;
+    color:red;
+    top:-10px;
+    font-size:32pt;
     }
 
 #header-h5 {
-    position:absolute;
-    color:brown;
-    top:30px;
-    right:60px;
+    position:relative;
+    color:red;
+
+    
 }
     
 #logo {
     width:12.5%;
-    
+    height:100pt;
+    border: 2px solid brown;
+    float:left;
+    position:relative;
+    top:-1px;
+    left:-1px;
 }
 
-.image {
-    margin-left:auto;
-    margin-right:auto;
+header {
+    margin:0 auto;
     background-image:url("https://upload.wikimedia.org/wikipedia/commons/thumb/1/11/Desert_de_Retz_Grass.jpg/800px-Desert_de_Retz_Grass.jpg");
     position:relative;
-    width:75%;
+    width:960px;
+    /*Change width back to 1440px when commit is pushed to repository*/
+    height:100pt;
+    border: 3px solid brown;
+}
+
+.header {
+    background-color: green;
+    height:100pt;
+    z-index:-10;
 }
 
 body {
-    background-color:#FFFFCC;
+    background:url("fabric_plaid_@2X.png");
+    margin:0;
 }
 
 #pic1 {
-    position:absolute;
-    
+    position:relative;
+    width:634px;
+    height:395px;
+    left:635px;
+    bottom:95px;
+    border:4pt solid brown;
 }
 
 #passion {
+    position:relative;
     margin-right:50%;
-    width:50%;
+    width:40%;
+    left:20px;
+    top:60px;
 }
 
-.body {
-    width:75%;
-    margin-left:auto;
-    margin-right:auto;
-    
+.container {
+    width:960px;
+    /*Change width back to 1440px when commit is pushed to repository*/
+     margin:0 auto;
 }
     
+p {
+    font-size:13pt;
+    text-indent:50px;
+}
+
+a {
+    text-decoration:none;
+}
+a:link{
+    color:green;
+}
+a:hover{
+    color:#000099;
+}
+
+
