--- a/style.css
+++ b/style.css
@@ -34,44 +34,113 @@
 
 header {
     margin:0 auto;
-    background-image:url("https://upload.wikimedia.org/wikipedia/commons/thumb/1/11/Desert_de_Retz_Grass.jpg/800px-Desert_de_Retz_Grass.jpg");
+    background-image:url("images/grass.jpg");
     position:relative;
-    width:960px;
+    width:954px;
     height:100pt;
     border: 3px solid brown;
 }
 
+.back-header {
+    background:url("images/beautiful_sky.jpg");
+    width:100%;
+    height:142px;
+    position:absolute;
+    border-bottom:4pt ridge blue;
+    z-index:-1;
+}
+
+.bar li {
+    display:inline;
+    border:2pt solid black;
+    padding:5px;
+    background-color:darkgreen;
+}
+
+.bar {
+    text-align:center;
+    border: 3pt solid green;
+    margin-bottom:-50px;
+    background-color:#00B800;
+}
+
+.bar .active:link{
+    color:white;
+}
+.bar .active:visited {
+    color:white;
+}
+.bar .active:hover {
+   color:#CCCCCC; 
+   font-weight:900;
+}
+
 body {
-    background-color:#CC6600;
+    background:url("images/dark_wood.png");
     margin:0;
-}
-
-#pic1 {
-    position:relative;
-    width:432.33px;
-    height:263.33px;
-    left:500px;
-    bottom:225px;
-    border:4pt double brown;
-  
-}
-
-#passion {
-    position:relative;
-    margin-right:50%;
-    width:40%;
-    left:20px;
-    top:60px;
-    padding-left:20px;
 }
 
 .container {
     width:960px;
     margin:0 auto;
-    background-color:#FFFFCC;
-    border-color:black;
+    background:url("images/paper.png");
+    border:2pt solid red;
 }
-    
+
+#pic1{
+    position:relative;
+    width:432.33px;
+    height:263.33px;
+    border:4pt double brown;
+    float:right;
+    top:180px;
+    left:-30px;
+}
+
+#welcome {
+    position:relative;
+    margin-right:50%;
+    width:40%;
+    top:150px;
+    left:20px;
+    background-color:#FFCC66;
+    padding:1px 20px;
+    border:2pt solid orange;
+}
+#welcome h2 {
+    text-decoration:underline;
+}
+#welcome p {
+    font-size:13pt;
+}
+
+#pic2 {
+    position:relative;
+    width:432.33px;
+    height:263.33px;
+    left:15px;
+    bottom:70px;
+    border:4pt double brown;
+}
+
+
+#passion {
+    position:relative;
+    margin-left:50%;
+    width:40%;
+    left:20px;
+    top:250px;
+    padding:1px 20px;
+    background-color:#FFCC66;
+    border:2pt solid orange;
+}
+#passion h2 {
+    text-decoration:underline;
+}
+#passion p {
+    font-size:13pt;
+}
+
 p {
     font-size:13pt;
     text-indent:50px;
@@ -88,35 +157,11 @@ a:hover{
 }
 
 .desc {
-    font-size:13px;
-}
-
-.bar li {
-    display:inline;
-    border:2pt solid black;
-    padding:5px;
-    background-color:darkgreen;
-}
-
-.bar {
-    text-align:center;
-    border: 3pt solid green;
-    margin-bottom:-50px;
-    background-color:#00B800;
-    padding:0;
-}
-.bar .active:link{
-    color:white;
-}
-.bar .active:visited {
-    color:white;
-}
-.bar .active:hover {
-   color:#CCCCCC; 
-   font-weight:900;
+    font-size:11pt;
 }
 
 .tours {
+    background-color:white;
     border:3px solid brown;
     border-collapse:collapse;
     width:90%;
@@ -126,7 +171,163 @@ a:hover{
 .tours th, td {
     border:2px solid black;
 }
+.tours tr:hover {
+    background-color:lightgrey;
+}
+.label {
+    text-align:center;
+}
 
 #llama_tours {
     padding-left:50px;
+    background-color:#331A00;
+    color:white;
+    margin-right:525px;
+    text-align:center;
 }
+
+.maps {
+    border-top:2pt solid black;
+    background-color:#333333;
+    padding:20px;
+    padding-left:22px;
+}
+
+#location {
+    text-align:center;
+    text-decoration:underline;
+}
+
+#address {
+    width:300px;
+    padding:45px;
+    position:relative;
+    right:55px;
+    float:right;
+    background-color:#DDDDDD;
+    border:4pt solid black;
+}
+#address hgroup, p {
+    text-indent:0;
+}
+#address h3 {
+    position:relative;
+    bottom:20px;
+}
+#address p {
+    position:relative;
+    bottom:30px;
+}
+
+.july {
+    position:relative;
+    top:20px;
+    background-color:#0066FF;
+    border:3pt solid darkblue;
+    padding: 0 20px 0;
+}
+.july div {
+    text-align:center;
+    background-color:#FF0000;
+    border:3pt solid #5C0000;
+}
+.july h2 {
+    position:relative;
+    text-align:center;
+    left:83px;
+    text-decoration:underline;
+    text-decoration:black;
+    background-color:#5C0000;
+    border:2pt solid red;
+    border-bottom:0;
+    margin-right:710px;
+    padding: 10px 20px 10px;
+}
+.july div p {
+    position:absolute;
+    width:150px;
+    top:153px;
+    left:385px;
+    border:0;
+    
+}
+.july p {
+    position:relative;
+    top:-21px;
+    left:50px;
+    font-family:arial;
+    margin-right:400px;
+    font-size:12pt;
+    background-color:#5C0000;
+    color:white;
+    padding:10px 10px;
+    border:2pt solid red;
+    
+}
+.red {
+    color:red;
+}
+.blue {
+    color:blue;
+}
+.white {
+    color:white;
+}
+
+footer {
+    padding:20px;
+}
+
+/*End of Home page, use for only home page or template*/
+
+.contactus {
+    position:relative;
+    padding:5px 0;
+    padding-left:20px;
+    padding-right:100px;
+    background-color:#FFCC66;
+    top:50px;
+    border:2pt solid orange;
+    border-top:0;
+}
+.contactus h2 {
+    text-decoration:underline;
+    font-size:20pt;
+    font-family:Arial;
+}
+.contactus p {
+    font-size:14pt;
+    font-family:Arial;
+    display:inline;
+    position:relative;
+    top:-20px;
+    font-weight:bold;
+}
+.contactus img {
+    float:right;
+    position:relative;
+    top:-123px;
+    left:10px;
+    border:2pt solid brown;
+}
+.contactus span {
+    width:696px;
+    position:relative;
+    display:block;
+    background-color:#FFFFCC;
+    border:2pt solid brown;
+    top:1px;
+    padding-left:10px;
+}
+
+.contactinfo {
+    font-family:Arial;
+    height:200px;
+    padding:40px;
+}
+.contactinfo h3 {
+    font-size:16pt;
+}
+
+/* End of Contact Us page */
+
