--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -45,7 +45,7 @@ header {
     background:url("../assets/images/beautiful_sky.jpg");
     width:100%;
     height:142px;
-    position:absolute;
+    position:fixed;
     border-bottom:4pt ridge blue;
     z-index:-1;
 }
@@ -289,6 +289,7 @@ footer {
 }
 
 /*End of Home page, use for only home page or template*/
+/*Beginning of Contact Us page */
 
 .contactus {
     position:relative;
@@ -339,23 +340,84 @@ footer {
 }
 
 /* End of Contact Us page */
+/* Beginning of Llama Tours page */
 
 .llamapics {
+    position:relative;
     width:120px;
     height:120px;
     border:2pt solid brown;
+    top:2px;
+    left:10px;
 }
 
 .tour {
     background-color:#FFDB94;
     border:2pt solid #663300;
+    width:90%;
+    margin:50.1px 40px;
 }
 .tour h3 {
+    padding-left:10px;
     font-size:16pt;
     text-decoration:underline;
     color:#522720;
 }
+.tour #desc_2-1 {
+    width:75%;
+    position:absolute;
+    left:165px;
+    bottom:2px;
+    text-indent:25px;
+}
+.tour #desc_2-2 {
+    width:75%;
+    position:absolute;
+    left:165px;
+    bottom:-12px;
+    text-indent:25px;
+}
+.tour #desc_2-3 {
+    width:75%;
+    position:absolute;
+    left:165px;
+    bottom:13px;
+    text-indent:25px;
+}
 .inner_tour {
     background-color:#FFE9BF;
     border:2.5pt solid #FFC751;
+    position:relative;
+    top:-50px;
 }
+
+button {
+    font-size:13pt;
+    font-family:arial, helvetica, sans-serif;
+    position:relative;
+    left:220px;
+    top:-56px;
+    bottom:1px;
+    z-index:5;
+    width:150px;
+    height:40px;
+    text-align:center;
+    background-color:lightgreen;
+    box-shadow:0 2px 0 green;
+    padding:5px;
+    border:0;
+    outline:0;
+    border-radius:5px;
+    cursor:pointer;
+    transition: all .03s linear;
+}
+button:active {
+    box-shadow:0 1px 0 green;
+    transform: translateY(1px);
+}
+.tour td {
+    text-align:center;
+}
+
+/*End of Llama Tours page*/
+/*Beginning of confirm.html*/
