--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -355,7 +355,7 @@ footer {
     background-color:#FFDB94;
     border:2pt solid #663300;
     width:90%;
-    margin:50.1px 40px;
+    margin:50.5px 40px;
 }
 .tour h3 {
     padding-left:10px;
@@ -414,6 +414,9 @@ button {
 button:active {
     box-shadow:0 1px 0 green;
     transform: translateY(1px);
+}
+button a:visited {
+    color:green;
 }
 .tour td {
     text-align:center;
